--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="card-box align-center">
 
 
-                            <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://hop.clickbank.net/?affiliate=billu121&vendor=fastleanpr&cbpage=tsl&tid=ttadvt&affop=1">Click Here To Watch The Video</a></div>
+                            <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://hop.clickbank.net/?affiliate=biomeelean&vendor=lbjuice&tid=ytds">Click Here To Watch The Video</a></div>
                         </div>
                     </div>
                 </div>
